--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apexcharts/apexgantt.git"
+  },
   "type": "module",
   "main": "./apexgantt.min.js",
   "module": "./apexgantt.es.min.js",
