--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "apexgantt",
   "version": "3.7.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apexcharts/apexgantt"
+  },
   "dependencies": {
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21"
